crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/yul_function_vs_subscope_variable/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:8:21]
   │
 8 │                 let g := 0
   │                     ┬  
   │                     ╰── Error occurred here.
───╯
